update modulos, added tests, added readme, update openapi
