# core/src/main/java/dev/thiagooliveira/order/core/models/Page.java
@@ -1,0 +1,15 @@
+package dev.thiagooliveira.order.core.models;
+
+import java.util.List;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+
+@Getter
+@AllArgsConstructor
+public class Page<T> {
+    private List<T> content;
+    private int pageNumber;
+    private int pageSize;
+    private long totalElements;
+    private int totalPages;
+}
