# data-mongo/src/main/java/dev/thiagooliveira/order/data/entities/OrderEntity.java
@@ -1,5 +1,7 @@
-package dev.thiagooliveira.order.entities;
+package dev.thiagooliveira.order.data.entities;
 
+import java.math.BigDecimal;
+import java.util.List;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
@@ -9,8 +11,6 @@ import org.springframework.data.mongodb.core.mapping.Field;
 import org.springframework.data.mongodb.core.mapping.FieldType;
 import org.springframework.data.mongodb.core.mapping.MongoId;
 
-import java.math.BigDecimal;
-
 @Document(collection = "orders")
 @Getter
 @Setter
@@ -18,11 +18,13 @@ import java.math.BigDecimal;
 public class OrderEntity {
 
     @MongoId
-    private int id;
+    private Integer id;
+
+    @Indexed(name = "customer_id_index")
+    private Integer customerId;
 
     @Field(targetType = FieldType.DECIMAL128)
     private BigDecimal total;
 
-    @Indexed(name = "customer_id_index")
-    private int customerId;
+    private List<OrderItem> items;
 }
